--- a/imperiya/styles/css/fontello.css
+++ b/imperiya/styles/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33335651');
-  src: url('../font/fontello.eot?33335651#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?33335651') format('woff2'),
-       url('../font/fontello.woff?33335651') format('woff'),
-       url('../font/fontello.ttf?33335651') format('truetype'),
-       url('../font/fontello.svg?33335651#fontello') format('svg');
+  src: url('../font/fontello.eot?26235713');
+  src: url('../font/fontello.eot?26235713#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?26235713') format('woff2'),
+       url('../font/fontello.woff?26235713') format('woff'),
+       url('../font/fontello.ttf?26235713') format('truetype'),
+       url('../font/fontello.svg?26235713#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33335651#fontello') format('svg');
+    src: url('../font/fontello.svg?26235713#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,16 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-cancel:before { content: '\e800'; } /* '' */
+.icon-right-open-big:before { content: '\e801'; } /* '' */
+.icon-right-open:before { content: '\e802'; } /* '' */
 .icon-vk:before { content: '\e803'; } /* '' */
+.icon-down-open-big:before { content: '\e804'; } /* '' */
+.icon-up-open-big:before { content: '\e805'; } /* '' */
+.icon-left-open-big:before { content: '\e806'; } /* '' */
+.icon-left-open:before { content: '\e807'; } /* '' */
+.icon-menu:before { content: '\e808'; } /* '' */
+.icon-menu-1:before { content: '\e809'; } /* '' */
+.icon-menu-2:before { content: '\f008'; } /* '' */
 .icon-facebook:before { content: '\f052'; } /* '' */
 .icon-instagram-1:before { content: '\f16d'; } /* '' */
