--- a/imperiya/styles/pages-style.css
+++ b/imperiya/styles/pages-style.css
@@ -100,6 +100,11 @@
 }
 
 /*///// NEWS /////////*/
+.page__news .news__img {
+    max-width: 1100px;
+    width: 100%;
+    height: auto;
+}
 .page__news .h2__rect {
     margin: 2% 1%;
 }
